--- a/page-components/TopPageComponent/TopPageComponent.module.css
+++ b/page-components/TopPageComponent/TopPageComponent.module.css
@@ -6,9 +6,6 @@
   gap: 20px;
 }
 
-.wrapper{
-  margin-top: 40px;
-}
 
 .hhTitle{
   display: grid;
@@ -17,3 +14,28 @@
   justify-items: left;
   gap: 20px;
 }
+
+.seo h1{
+  font-weight: 500;
+  font-size: 26px;
+  line-height: 35px;
+  margin: 0;
+}
+
+.seo h2{
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 30px;
+  margin-top: 50px;
+  margin-bottom: 20px;
+
+}
+
+
+.seo h3{
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 27px;
+  margin: 0;
+}
+
