--- a/components/Product/Product.module.css
+++ b/components/Product/Product.module.css
@@ -32,3 +32,177 @@
 .advBlock{
    grid-column: middle / end;
 }
+
+.logo img{
+  border-radius: 5px;
+}
+
+.category{
+  margin-top: 5px;
+}
+
+.description{
+  font-size: 16px;
+  line-height: 24px;
+  margin-bottom: 15px;
+}
+
+.title{
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 27px;
+  align-self: flex-end;
+}
+
+.month{
+  font-size: 14px;
+  line-height: 19px;
+}
+
+.oldPrice{
+  margin-left: 5px;
+}
+
+.price  , .credit{
+  font-size: 20px;
+  line-height: 27px;
+}
+
+
+
+.rating{
+  align-self:flex-end;
+}
+.priceTitle, .creditTitle, .rateTitle{
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 19px;
+}
+
+.reviewButton{
+  margin-left: 20px;
+}
+
+.advTitle{
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 22px;
+  margin-bottom: 5px;
+}
+
+.advantages{
+  padding-left: 15px;
+  border-left:2px solid var(--green);
+  margin-bottom: 20px;
+}
+
+.disadvantages{
+  border-left:2px solid var(--red);
+  padding-left: 15px;
+  margin-bottom: 20px;
+}
+
+.characteristics{
+display: grid;
+grid-template-columns: auto 1fr auto;
+padding-right: 60px;
+gap: 10px;
+}
+
+.characteristicName{
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 32px;
+  color: #3B434E;
+}
+
+.characteristicDots{
+  border-bottom: 1px dashed var(--gray-light);
+  margin-bottom: 10px;
+  align-items: baseline;
+}
+.characteristicsValue{
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 22px;
+  text-align: right;
+  color: #3B434E;
+}
+
+@media screen and (max-width:1320px){
+  .product{
+  justify-content: center;
+  align-items:center;
+  display: grid;
+  grid-template-columns:  70px  30px auto 40px auto  40px  1fr;
+  grid-template-areas:
+  "logo . title title title title title"
+  "logo . tags tags tags tags tags" 
+  "price price price .  credit . rating "
+  "priceTitle priceTitle priceTitle . creditTitle . rateTitle"
+  "hr hr hr hr hr hr"
+  "description description description description description description"
+  "features features features features features features"
+  "advBlock advBlock advBlock advBlock advBlock advBlock"
+  "hr2 hr2 hr2 hr2 hr2 hr2"
+  "actions actions actions actions actions actions"
+  ;
+  }
+
+  .logo{
+    margin-bottom: 20px;
+  }
+  .features{
+    margin-bottom: 20px;
+  }
+ 
+}
+@media screen and  (max-width:640px){
+  .product{
+    display: grid;
+    grid-template-columns: 70px 30px 1fr;
+    grid-template-areas:
+    "logo . title"
+    "logo . tags"
+    "priceTitle priceTitle price"
+    "creditTitle creditTitle credit"
+    "rateTitle rateTitle rating"
+    "hr hr hr"
+    "description description description"
+    "features features features"
+    "advBlock advBlock advBlock"
+    "hr2 hr2 hr2"
+    "actions action actions"
+    ;
+  }
+  .price{
+    margin-bottom: 10px;
+  }
+  .credit{
+    margin-bottom: 10px;
+  }
+  .rating{
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (max-width:480px){
+  .product{
+    grid-template-columns: 1fr;
+    grid-template-areas:   
+    "logo"
+    "tags"
+    "price"
+    "priceTitle"
+    "credit"
+    "creditTitle"
+    "rating"
+    "ratingTitle"
+    "hr"
+    "description"
+    "features"
+    "advBlock"
+    "hr2"
+    "actions ";
+  }
+}
