--- a/components/Product/Product.module.css
+++ b/components/Product/Product.module.css
@@ -1,7 +1,7 @@
 .product{
   display: grid;
   grid-template-columns: [start] 70px [logoend] 30px [titlestart] calc(50% - 100px) [middle] 1fr [pricestart] auto [priceend] 40px  [creditstart] auto  [creditend] 40px  [ratestart] auto  [end];
-  margin-bottom: 30px;
+  margin-top: 30px;
   padding: 30px;
 }
 
@@ -69,6 +69,18 @@
 }
 
 
+.closed{
+  overflow: hidden;
+  max-height: 0;
+  padding: 0;
+}
+.opened{
+  max-height: auto;
+  padding: 30px;
+}
+
+.reviews{
+}
 
 .rating{
   align-self:flex-end;
@@ -206,3 +218,4 @@ gap: 10px;
     "actions ";
   }
 }
+
