--- a/components/Rating/Rating.module.css
+++ b/components/Rating/Rating.module.css
@@ -10,3 +10,18 @@
 .editable {
   cursor: pointer;
 }
+
+.ratingWrapper{
+  position: relative;
+}
+
+.error svg{
+  stroke: var(--red);
+}
+
+.errorMessage{
+  position: absolute;
+  bottom:-40px;
+  color:var(--red);
+  left: -20px;
+}
