--- a/components/ReviewForm/ReviewForm.module.css
+++ b/components/ReviewForm/ReviewForm.module.css
@@ -24,6 +24,10 @@
   gap: 20px;
 }
 
+.error{
+  background-color:var(--red-light);
+}
+
 .success{
   background-color:var(--green-light);
   padding:20px;
@@ -41,6 +45,10 @@
   top: 20px;
   right: 20px;
   cursor: pointer;
+}
+
+.error .close path{
+  stroke:var(--red);
 }
 
 @media screen and (max-width:1100px){
