--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,6 +35,7 @@ a {
   --primary:#7653FC;
   --primary-hover:#412b98;
   --red:#FC836D;
+  --red-light:#fea291;
   --green:#1DC37E;
   --green-light:#C8F8E4;  
   --font-family: 'Noto Sans', sans-serif;
