keyboard event sidebar

--- a/layout/Menu/Menu.module.css
+++ b/layout/Menu/Menu.module.css
@@ -40,9 +40,9 @@
   color:var(--gray-dark);
   font-weight: 500;
   font-size: 14px;
-  line-height: 19px;
-  display: block;
+    display: block;
   transition: all 0.3s ease-in;
+  outline-offset: -1px;
 }
 
 .secondLevelBlock{
